load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

cmake_external(
    name = "libz",
    lib_source = "@zlib_archive//:all",
)

cmake_external(
    name = "libpng",
    cache_entries = {
        "ZLIB_ROOT": "$EXT_BUILD_DEPS/libz",
    },
    lib_source = "@libpng_archive//:all",
    out_include_dir = "include/libpng16",
    static_libraries = ["libpng16.a"],
    deps = [":libz"],
)

cmake_external(
    name = "opencv",
    # Values to be passed as -Dkey=value on the CMake command line;
    # here are serving to provide some CMake script configuration options
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        # "WITH_IPP": "OFF",
        "ZLIB_ROOT": "$EXT_BUILD_DEPS/libz",
        # "WITH_JPEG": "OFF",
        # "WITH_PNG": "OFF",
        # "BUILD_JPEG": "OFF",
        "WITH_TIFF": "OFF",
        "BUILD_TIFF": "OFF",
        "BUILD_JASPER": "OFF",
        "WITH_JASPER": "OFF",
        "BUILD_OPENEXR": "OFF",
        "WITH_OPENEXR": "OFF",
        "BUILD_opencv_python2": "OFF",
        "BUILD_opencv_python3": "OFF",
        # "PNG_LIBRARY": "$EXT_BUILD_DEPS/libpng/lib/libpng16.a",
        # "PNG_PNG_INCLUDE_DIR": "$EXT_BUILD_DEPS/libpng/include",
        "OPENCV_FORCE_3RDPARTY_BUILD": "OFF",
    },
    lib_source = "@opencv_archive//:all",
    make_commands = [
        "make -j6",
        "make -j6 install",
    ],
    shared_libraries = [
        "libopencv_calib3d.so",
        "libopencv_calib3d.so.3.4",
        "libopencv_calib3d.so.3.4.4",
        "libopencv_core.so",
        "libopencv_core.so.3.4",
        "libopencv_core.so.3.4.4",
        "libopencv_dnn.so",
        "libopencv_dnn.so.3.4",
        "libopencv_dnn.so.3.4.4",
        "libopencv_features2d.so",
        "libopencv_features2d.so.3.4",
        "libopencv_features2d.so.3.4.4",
        "libopencv_flann.so",
        "libopencv_flann.so.3.4",
        "libopencv_flann.so.3.4.4",
        "libopencv_highgui.so",
        "libopencv_highgui.so.3.4",
        "libopencv_highgui.so.3.4.4",
        "libopencv_imgcodecs.so",
        "libopencv_imgcodecs.so.3.4",
        "libopencv_imgcodecs.so.3.4.4",
        "libopencv_imgproc.so",
        "libopencv_imgproc.so.3.4",
        "libopencv_imgproc.so.3.4.4",
        "libopencv_ml.so",
        "libopencv_ml.so.3.4",
        "libopencv_ml.so.3.4.4",
        "libopencv_objdetect.so",
        "libopencv_objdetect.so.3.4",
        "libopencv_objdetect.so.3.4.4",
        "libopencv_photo.so",
        "libopencv_photo.so.3.4",
        "libopencv_photo.so.3.4.4",
        "libopencv_shape.so",
        "libopencv_shape.so.3.4",
        "libopencv_shape.so.3.4.4",
        "libopencv_stitching.so",
        "libopencv_stitching.so.3.4",
        "libopencv_stitching.so.3.4.4",
        "libopencv_superres.so",
        "libopencv_superres.so.3.4",
        "libopencv_superres.so.3.4.4",
        "libopencv_video.so",
        "libopencv_video.so.3.4",
        "libopencv_video.so.3.4.4",
        "libopencv_videoio.so",
        "libopencv_videoio.so.3.4",
        "libopencv_videoio.so.3.4.4",
        "libopencv_videostab.so",
        "libopencv_videostab.so.3.4",
        "libopencv_videostab.so.3.4.4",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # ":libpng",
        ":libz",
    ],
)
